--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,38 @@
+amqp==1.4.9
+anyjson==0.3.3
+billiard==3.3.0.23
+celery==3.1.25
+certifi==2019.9.11
+chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
 Django==2.2.6
+django-celery==3.3.1
+django-filter==2.2.0
+django-redis==4.10.0
 djangorestframework==3.10.3
 djangorestframework-jwt==1.11.0
+drf-extensions==0.5.0
+et-xmlfile==1.0.1
+idna==2.8
+itypes==1.1.0
+jdcal==1.4.1
+Jinja2==2.10.3
+kombu==3.0.37
+MarkupSafe==1.1.1
 mysqlclient==1.4.4
+numpy==1.17.3
+openpyxl==3.0.0
+pandas==0.25.3
 PyJWT==1.7.1
 pymongo==3.9.0
 PyMySQL==0.9.3
+python-dateutil==2.8.1
 pytz==2019.3
+redis==2.10.6
+requests==2.22.0
+six==1.13.0
 sqlparse==0.3.0
+uritemplate==3.0.0
+urllib3==1.25.6
+yagmail==0.11.224
